initial commit with basic auth

--- a/UoM.Blazor/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/UoM.Blazor/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 @using Microsoft.AspNetCore.Identity
-
+@using UoM.Blazor.Areas.Identity.Pages.Account
 @namespace UoM.Blazor.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
