--- a/UoM.Blazor/Areas/Identity/Pages/_IdentityLayout.cshtml
+++ b/UoM.Blazor/Areas/Identity/Pages/_IdentityLayout.cshtml
@@ -1,12 +1,13 @@
-﻿<!DOCTYPE html>
+﻿﻿﻿
+<!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/site.css" rel="stylesheet" />
+    <link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="~/css/site.css" rel="stylesheet" />
 </head>
-<body style="margin: 50px;">
+<body style="margin:50px">
     @RenderBody()
 </body>
 </html>
