--- a/UoM.Blazor/Shared/NavMenu.razor
+++ b/UoM.Blazor/Shared/NavMenu.razor
@@ -15,10 +15,16 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/assays">
+                <span class="oi oi-account-logout" aria-hidden="true"></span> Assays
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="identity/account/logout">
                 <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
             </NavLink>
         </div>
+        
     </nav>
 </div>
 
